fixed menu not showing new categories

--- a/Modules/altonlane/AltonLaneHeader@dev/Sass/_al-header-styles.scss
+++ b/Modules/altonlane/AltonLaneHeader@dev/Sass/_al-header-styles.scss
@@ -144,7 +144,6 @@
 }
 
 .header-menu-level-container {
-
    &>li {
     margin-left: 13px;
   }
@@ -156,7 +155,12 @@
   .al-sub-showrooms{
     margin-left: 165px;
   }
+}
 
+.open {
+  .header-menu-level-container, .header-profile-menu-myaccount-container {
+    height:auto;
+  }
 }
 
 .header-menu-level-container {
